--- a/GoneBananasAndroid/packages.config
+++ b/GoneBananasAndroid/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CocosSharp.Android" version="1.3.1.0" targetFramework="MonoAndroid42" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="MonoAndroid44" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="MonoAndroid44" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="MonoAndroid44" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="MonoAndroid44" />
+  <package id="WindowsAzure.MobileServices" version="1.3.1" targetFramework="MonoAndroid44" />
 </packages>
